@@ -1,5 +1,9 @@
 2007-03-29  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>
 
+	* fileRepository.c: 
+	Fixed 1690029: sfcb file repository failure on long directory names,
+	Invalid buffer allocation size corrected now.
+
 	* sfcbrepos.sh.in: 
 	Fixed 1690026: sfcb repository build fails if no "global" MOF found.
 	The missing of all-namespace MOFs in the staging area is now
